--- a/UI/UIByOwn.html
+++ b/UI/UIByOwn.html
@@ -4,104 +4,120 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="UICSS.css">
-    </head>
-    <body>
-        <!-- Navigation Bar -->
-        <header id="headerAll">
-            <a href="">WebJa</a>
-            <ul id="headerList">
-                <li><a href="">HTML</a></li>
-                <li><a href="">CSS</a></li>
-                <li><a href="">JS</a></li>
-                <li><a href="">React</a></li>
-                <li><a href="">JSX</a></li>
-            </ul>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="UICSS.css" />
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <header id="headerAll">
+      <a id="headerLink" href="">WebJa</a>
+      <ul id="headerList">
+        <li id="headerLI"><a id="headerLIa" href="">HTML</a></li>
+        <li id="headerLI"><a id="headerLIa" href="">CSS</a></li>
+        <li id="headerLI"><a id="headerLIa" href="">JS</a></li>
+        <li id="headerLI"><a id="headerLIa" href="">React</a></li>
+        <li id="headerLI"><a id="headerLIa" href="">JSX</a></li>
+      </ul>
 
-            <button id="headerButton"><a href="">Conatact</a></button>
+      <button id="headerButton"><a href="">Conatact</a></button>
 
-            <button id="hamBurgerButton" onclick="makeHeader()"><img src="/UI/icon/image.png" width="25px" alt=""></button>
-        </header>
-        <div class="caret" id="carati">
-            <div class="place">
-                <button onclick="caretSideBar()"><img src="/UI/icon/caret-right-outline-icon.png"  alt="" width="18px"></button>
-            </div>
-        </div>
+      <button id="hamBurgerButton" onclick="makeHeader()">
+        <img src="/UI/icon/image.png" width="25px" alt="" />
+      </button>
+    </header>
 
-        <div class="wrapper" id="wrapi">
-            <div class="sidebar">
-                <h3>SideBar Content</h3>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-                <a href="">Topics 1</a>
-            </div>
-        </div>
-        
+    <header id="header500">
+      <a href="">WebJa</a>
 
-        <div class="data">
+      <div><a href="">HTML</a></div>
+      <div><a href="">CSS</a></div>
+      <div><a href="">JS</a></div>
+      <div><a href="">React</a></div>
+      <div><a href="">JSX</a></div>
 
-        </div>
+      <button id="header500Button"><a href="">Conatact</a></button>
+    </header>
 
-        <footer>
+    <div class="caret" id="carati">
+      <div class="place">
+        <button onclick="caretSideBar()">
+          <img
+            src="/UI/icon/caret-right-outline-icon.png"
+            alt=""
+            width="15vw"
+          />
+        </button>
+      </div>
+    </div>
 
-        </footer>
-        <script src="UICSS.js" ></script>
-    </body>
+    <div class="wrapper" id="wrapi">
+      <div class="sidebar">
+        <h3>SideBar Content</h3>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+        <a href="">Topics 1</a>
+      </div>
+    </div>
+
+    <div class="data"></div>
+
+    <footer></footer>
+    <script src="UICSS.js"></script>
+  </body>
 </html>
