--- a/UI/index.html
+++ b/UI/index.html
@@ -17,8 +17,8 @@
         <div class="content">
              <!-- Content Load -->
             <div id="content2"></div>
-            <h1>Welcome to the Premium UI</h1>
-            <p>This is the main content area. You can add any content here.</p>
+            <!-- <h1>Welcome to the Premium UI</h1>
+            <p>This is the main content area. You can add any content here.</p> -->
         </div>
     </div>
 
@@ -34,7 +34,7 @@
             );
         }
   
-        loadHTMLContent("UI.html", "content1");
+        loadHTMLContent("UIByOwn.html", "content1");
         loadHTMLContent("/Learning Topics/1. align-content.html", "content2");
         // loadHTMLContent('5_experienceFeature.html', 'content3');
         // loadHTMLContent('4_sideBar.html', 'content4');
