--- a/UI/UIByOwn.html
+++ b/UI/UIByOwn.html
@@ -24,7 +24,7 @@
         <li id="headerLI"><a id="headerLIa" href="">JSX</a></li>
       </ul>
 
-      <button id="headerButton"><a href="">Conatact</a></button>
+      <button id="headerButton"><a href="/UI/editor.html" target="_blank">LiveIt</a></button>
 
       <button id="hamBurgerButton" onclick="makeHeader()">
         <img src="/UI/icon/image.png" width="25px" alt="" />
