--- a/UI/Editor.html
+++ b/UI/Editor.html
@@ -3,131 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="Editor.css"> -->
-    <title>Premium TryIt Editor</title>
-    <style>
-        
-/* Reset some default styles */
-body, h1, h2, h3, h4, h5, h6, p, ul, ol {
-    margin: 0;
-    padding: 0;
-}
+    <link rel="stylesheet" href="editor.css">
+    <title>WebJa HTML Editor</title>
 
-body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #121212;
-    color: #e0e0e0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.container {
-    width: 80%;
-    height: 90vh;
-    background-color: #1e1e1e;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.header {
-    height: 5%;
-    background-color: #333;
-    padding: 20px;
-    text-align: center;
-    border-bottom: 1px solid #444;
-}
-
-.header h1 {
-    font-size: 24px;
-    color: #fff;
-}
-
-.editPanel{
-    width: 100%;
-    height: 90%;
-    display:flex;
-    flex-direction: row;
-}
-.editor {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-}
-
-.editor textarea {
-    flex: 1;
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-    border: none;
-    padding: 20px;
-    font-size: 16px;
-    resize: none;
-    outline: none;
-}
-
-.editor .run-button {
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    padding: 15px;
-    cursor: pointer;
-    text-align: center;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-}
-
-.editor .run-button:hover {
-    background-color: #0056b3;
-}
-
-.output {
-    width: 50%;
-    height: 100%;
-    background-color: #fff;
-    color: #000;
-    padding: 20px;
-    border-top: 1px solid #444;
-    overflow: auto;
-    /* height: calc(50vh - 60px); */
-}
-
-.output iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-color: #fff;
-}
-
-.footer {
-    height: 5%;
-    background-color: #333;
-    padding: 10px;
-    text-align: center;
-    border-top: 1px solid #444;
-    color: #aaa;
-}
-
-    </style>
 
 </head>
 <body>
     <div class="container">
 
         <div class="header">
-            <h1>Premium TryIt Editor</h1>
+            <h1>WebJa HTML Editor</h1>
         </div>
         <div class="editPanel">
             <div class="editor">
                 <textarea id="code" placeholder="Type your HTML and CSS here..."></textarea>
-    
                 <button class="run-button" id="run-button">Run</button>
             </div>
             <div class="output">
