--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -16,7 +16,7 @@
 
 
 
-    <div class="container">
+    <div id="container">
       <div class="headerContainer">
           <div class="head">
               <div class="name">
@@ -35,15 +35,26 @@
                 <a href="">LogIn</a>
               </div>
               <div class="LiveIt">
-                <button><a href="">LiveIt</a></button>
+                <button><a href="editor.html" target="_blank">LiveIt</a></button>
               </div>
           </div>
           <div class="topics">
-              
+              <div class="topics_1"><button onclick="makeWrapeer()"><img src="icon/image.png" alt="" width="30%"></button></div>
+              <div class="topics_2"></div>
+              <div class="topics_3"></div>
+              <div class="topics_4"></div>
+              <div class="topics_5"></div>
+              <div class="topics_6"></div>
+              <div class="topics_7"></div>
+              <div class="topics_8"></div>
+              <div class="topics_9"></div>
+              <div class="topics_10"></div>
+              <div class="topics_11"></div>
+              <div class="topics_12"></div>
           </div>
       </div>
   
-      <div class="sideBar">
+      <div id="sideBar">
         <div class="wrapper" id="wrapi">
             <h3>CSS Contents</h3>
             <a href="#" onclick="loadHTMLContent('/Learning Topics/1. align-content.html', 'content2');  return false;">align-content</a>
@@ -577,7 +588,7 @@
       loadHTMLContent("/Learning Topics/1. align-content.html", "content2");
 
     </script>
-    <script src="" async defer></script>
+    <script src="UI_2.0.js" ></script>
   </body> 
 
 </html>
