--- a/Learning Topics/2. align-items.html
+++ b/Learning Topics/2. align-items.html
@@ -5,6 +5,7 @@
     <title>align-items</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/cssFile/data.css"/>
+    <script src="/cssFile/data.js"></script>
 
 </head>
 <body>
