--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>WebJa</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="UI_2.0.css">
@@ -40,7 +40,7 @@
               </div>
           </div>
           <div class="topics">
-              <div class="topics_1"><button onclick="makeWrapeer()"><img src="icon/image.png" alt="" width="30%"></button></div>
+              <div class="topics_1"><button id="burger" ><img src="icon/image.png" alt="" width="50%"></button></div>
               <div class="topics_2"></div>
               <div class="topics_3"></div>
               <div class="topics_4"></div>
@@ -561,7 +561,7 @@
         </div>
       </div>
 
-      <div class="content">
+      <div class="content" id="content">
         <div id="content2"></div>
       </div>
   
