--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -30,8 +30,18 @@
               <div class="data_5"></div>
               <div class="data_6"></div>
               <div class="data_7"></div>
-              <div class="data_8"></div>
-              <div class="data_9"></div>
+              <div class="data_8">
+                <!-- <div class="slider-container">
+                  <input
+                    type="range"
+                    id="theme-slider"
+                    class="slider"
+                    min="0"
+                    max="100"
+                    value="0"
+                  />
+                </div> -->
+              </div>
               <div class="LogIn">
                 <a href="">LogIn</a>
               </div>
